--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,7 +8,7 @@ sites:
   - name: Olimpo 2.0 
     url: https://unimonserrate.ohelit.co/
   - name: UTM UNIMON 
-    url: http://190.131.209.65:65040/
+    url: https://190.131.209.65:65040/
   - name: Koha Estudiantes
     url: https://unimonserrate-library.ohelit.co/
   - name: Koha Administrativos
