--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,8 +7,8 @@ sites:
     url: https://www.unimonserrate.edu.co/
   - name: Olimpo 2.0 
     url: https://unimonserrate.ohelit.co/
-  - name: UTM UNIMON 
-    url: https://190.131.209.65:65040/
+  #- name: UTM UNIMON 
+   # url: https://190.131.209.65:65040/
   - name: Koha Estudiantes
     url: https://unimonserrate-library.ohelit.co/
   - name: Koha Administrativos
